Fix gallery items not shrinking enough on small screens

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -135,6 +135,7 @@ article {
 
 .gallery-thumb {
     max-width: 450px;
+    min-width: 200px;
     border-radius: 2px 2px 15px 15px;
     cursor: pointer;
     margin-bottom: 10px;
